# 02671_SciML

./: .gitignore  L02.ipynb  L03.ipynb  README.md
excessices/export/: L03.html  L05.html
exercises/: L03.ipynb  L05.ipynb  pyproject.toml
exercises/data/: CYLINDER_ALL.mat
project/: A1.ipynb  envSML.sh
project/data/: lsmask.nc  sst.mnmean.nc
project/poster/: bib.yml  my_poster.typ  poster.typ
