[tool.poetry]
name = "sml"
version = "0.1.0"
description = ""
authors = ["S203977"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
scipy = "^1.12.0"
ipykernel = "^6.29.3"
torch = "^2.2.1"
sympy = "^1.12"
xarray = "^2024.3.0"
h5netcdf = "^1.3.0"
pyyaml = "^6.0.1"
nbformat = "^5.10.4"
nbclient = "^0.10.0"
pysindy = "^1.7.5"
nbconvert = "^7.16.4"


[tool.poetry.group.dev.dependencies]
notebook = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
